--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ logo.png<html lang="en"><!--<![endif]--><head><meta http-equiv="Content-Type" co
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Dizme | Home</title>
+<title>MJ JONY | Home</title>
 
 <!-- STYLES -->
 <link href="./Dizme _ Home_files/css2" rel="stylesheet">
